# customer_segmentation

./: eda.ipynb  pyproject.toml  test.ipynb  testv2.ipynb
