[tool.poetry]
name = "customer-segmentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.2"
jupyter = "^1.0.0"
altair = "^5.4.0"
tabulate = "^0.9.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
